@@ -13,13 +13,14 @@
       &ndash;
       == added #{time_ago_in_words(opportunity.created_at)} ago by
       == #{opportunity.user.id == @current_user.id ? "me" : opportunity.user.full_name}
-    %dt
-      %b= number_to_currency(opportunity.weighted_amount, :precision => 0) << " | "
-      - unless %w(won lost).include?(opportunity.stage)
-        == #{number_to_currency(opportunity.amount || 0, :precision => 0)} with
-        == #{opportunity.discount ? number_to_currency(opportunity.discount, :precision => 0) : "no"} discount and
-        == #{opportunity.probability || 0}% probability #{"|"}
-      - if opportunity.closes_on
-        == expected to close in #{distance_of_time_in_words(Date.today, opportunity.closes_on)}
-      - else
-        no expected closing date
+    - unless @current_user.preference[:opportunities_outline] == "brief"
+      %dt
+        %b= number_to_currency(opportunity.weighted_amount, :precision => 0) << " | "
+        - unless %w(won lost).include?(opportunity.stage)
+          == #{number_to_currency(opportunity.amount || 0, :precision => 0)} with
+          == #{opportunity.discount ? number_to_currency(opportunity.discount, :precision => 0) : "no"} discount and
+          == #{opportunity.probability || 0}% probability #{"|"}
+        - if opportunity.closes_on
+          == expected to close in #{distance_of_time_in_words(Date.today, opportunity.closes_on)}
+        - else
+          no expected closing date
