@@ -46,7 +46,7 @@ describe OpportunitiesController do
       get :index
       # Note: can't compare opportunities directly because of BigDecimal objects.
       assigns[:opportunities].size.should == 2
-      assigns[:opportunities].map(&:stage).should == %w(prospecting qualification)
+      assigns[:opportunities].map(&:stage).sort.should == %w(prospecting qualification)
     end
 
     describe "AJAX pagination" do
@@ -635,7 +635,56 @@ describe OpportunitiesController do
     it_should_behave_like("auto complete")
   end
 
-  # Ajax request to filter out list of opportunities.                      AJAX
+  # GET /opportunities/options                                             AJAX
+  #----------------------------------------------------------------------------
+  describe "responding to GET options" do
+    it "should set current user preferences when showing options" do
+      @per_page = Factory(:preference, :user => @current_user, :name => "opportunities_per_page", :value => Base64.encode64(Marshal.dump(42)))
+      @outline  = Factory(:preference, :user => @current_user, :name => "opportunities_outline",  :value => Base64.encode64(Marshal.dump("long")))
+      @sort_by  = Factory(:preference, :user => @current_user, :name => "opportunities_sort_by",  :value => Base64.encode64(Marshal.dump("opportunities.name ASC")))
+
+      xhr :get, :options
+      assigns[:per_page].should == 42
+      assigns[:outline].should  == "long"
+      assigns[:sort_by].should  == "name"
+    end
+
+    it "should not assign instance variables when hiding options" do
+      xhr :get, :options, :cancel => "true"
+      assigns[:per_page].should == nil
+      assigns[:outline].should  == nil
+      assigns[:sort_by].should  == nil
+    end
+  end
+
+  # POST /opportunities/redraw                                             AJAX
+  #----------------------------------------------------------------------------
+  describe "responding to POST redraw" do
+    it "should save user selected opportunity preference" do
+      xhr :post, :redraw, :per_page => 42, :outline => "brief", :sort_by => "name"
+      @current_user.preference[:opportunities_per_page].should == "42"
+      @current_user.preference[:opportunities_outline].should  == "brief"
+      @current_user.preference[:opportunities_sort_by].should  == "opportunities.name ASC"
+    end
+
+    it "should reset current page to 1" do
+      xhr :post, :redraw, :per_page => 42, :outline => "brief", :sort_by => "name"
+      session[:opportunities_current_page].should == 1
+    end
+
+    it "should select @opportunities and render [index] template" do
+      @opportunities = [
+        Factory(:opportunity, :name => "A", :user => @current_user),
+        Factory(:opportunity, :name => "B", :user => @current_user)
+      ]
+
+      xhr :post, :redraw, :per_page => 1, :sort_by => "name"
+      assigns(:opportunities).should == [ @opportunities.first ]
+      response.should render_template("opportunities/index")
+    end
+  end
+
+  # POST /opportunities/filter                                             AJAX
   #----------------------------------------------------------------------------
   describe "responding to GET filter" do
 
